--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -17,8 +17,8 @@ font-family: 'Oswald', sans-serif;
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
-    font-weight: 400;
-    color: #494949;
+    font-weight: 500;
+    color: black;
 }
 
 ul {
@@ -31,6 +31,7 @@ a,
 a:hover,
 a:focus,
 a:active {
+
     text-decoration: none;
     border: none;
     outline: none;
@@ -61,9 +62,8 @@ select:active {
 }
 
 .padding-top {
-    padding-top: 70px;
+    padding-top: 30px;
 }
-
 .nav > li > a:focus,
 .nav > li > a:hover {
     background-color: transparent;
