--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -12,7 +12,7 @@ font-family: 'Oswald', sans-serif;
 * {
     /* padding-top:  10px; */
     margin: 0px;
-    padding: 0px;
+    /* padding: 0px; */
 }
 
 body {
